chatbot.css
body{
   font-family: Robot,Arial;
   margin-bottom:0px;
   margin-top:0px;
   padding-top:75px;
}

.header{
   height: 75px;
   background-image: linear-gradient(100deg, #93befc,#0386E8 );
   position: fixed;
   top:0;
   right:0;
   left:0;

   display:flex;
   justify-content: center;
   align-items: center;
   
}

.title{
   color:white;
   font-size: 35px;
   font-family:"DynaPuff",serif;
}

.welcome-message{
   color:rgb(92, 92, 92);
   display: flex;
   justify-content: center;
}

.app-container{
   max-width:600px;

   margin-left:auto;
   margin-right:auto;

   display:flex;
   flex-direction: column;
   column-gap: 10px;

   height: 90vh;
}

.input-container{
   display:flex;
   margin-bottom:30px;
   max-width:600px;
   width: 100%;
   position:fixed;
   bottom:0;
}

.send-button{
   background-color: #0386E8;
   color:white;
   padding: 12px 20px;
   margin-left:10px;
   border:none;
   border-radius: 10px;
   font-size:15px;
   cursor: pointer;
}
.send-button:active{
   opacity: 0.8;
}

.message-input{
   padding:12px 15px;
   border-radius: 10px;
   border-width: 1px;
   font-size:15px;

   flex-grow: 1;
}
.messages-section{
   flex-grow:1;
   margin-top:15px;
   margin-bottom:15px;
   justify-content: center;
   overflow:scroll;
   scrollbar-width: none;
}

.chat-message{
   margin-top:12px;
   background-color: rgb(238, 238, 238);
   padding:15px 20px;
   border-radius:10px;
   max-width: 300px;
   overflow-wrap: break-word;
}

.chat-message-user-icon{
   width:50px;
}

.user-message{
   display:flex;
   justify-content: end;
   align-items: center;
   column-gap:10px;

}

.robot-message{
   display: flex;
   justify-content: start;
   align-items: center;
   column-gap:10px;
}

.loading-image{
   height: 40px;
   margin:-15px;
}


@media (max-width:600px){
   body{
      margin:0px;
   }
   .app-container{
      width:100%;
      margin-left:10px;
      margin-right:10px;

      height: 100vh;
   }
}

